= Changelog
:toc:

== v0.21.0: Breaking Change

As the releases before, this release has 100% test coverage.

=== Drop support for Go versions before 1.14

Dropping support for Go 1.10, 1.11, 1.12 and 1.13 to leverage new errors and testing features.

In particular The `errors.Is` and `errors.As` features greatly simplify error testing and handling and are used in the new DAG build system.

=== New Feature

Introduces a new Directed Acyclic Graph Build System.

The build system is a separate import package: `import "github.com/DavidGamba/go-getoptions/dag"`

Documentation can be found in its own link:./dag/README.adoc[README].

== v0.20.2: Feature Update

As the releases before, this release has 100% test coverage.

=== Deprecration WARNING

Support for Go 1.10, 1.11 and 1.12 will be dropped in a future release.
The `errors.Is` and `errors.As` features greatly simplify error testing and handling and will likely be introduced in the near future.

=== Improve autocompletion behaviour.

* Pass autocompletion entries to children.
+
From v0.20.0 all options starting being passed to children commands.
Their completion entries were missing.

* Separate internal option completion between flags that don't expect and argument and options that do.
When an option that expects an argument is found, the given argument won't break the completion chain.
Only one argument is supported per option.

* Don't break autocompletion chain when there is an option in the chain that accepts an argument with `=`.
For example: `program --profile=dev <tab><tab>` will show completions for program.

== v0.20.1: Feature Update

As the releases before, this release has 100% test coverage.

* Improve autocompletion behaviour.
+
Break words in COMP_LINE by matching against multiple spaces `\s+` instead of a single one.

== v0.20.0: Breaking Change

As the releases before, this release has 100% test coverage.

=== Method Deprecation

* Deprecate `opt.SetOption`
+